fix confirm post delete ui when it get out of screen in mobile device

--- a/public/styles/partials/post.css
+++ b/public/styles/partials/post.css
@@ -53,3 +53,9 @@
   gap: var(--gutter, 0px);
   align-content: start;
 }
+
+@media screen and (max-width: 600px) {
+  .delete-post-concent[open] {
+    left: -150px;
+  }
+}
